--- a/SignalRLiveSportsDashboardDemo/wwwroot/css/site.css
+++ b/SignalRLiveSportsDashboardDemo/wwwroot/css/site.css
@@ -1,71 +1,52 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
+﻿html {
   position: relative;
   min-height: 100%;
 }
-
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+.container {
+    padding: 5px;
+    max-width: 100%;
+}
+header {
+    background: #e90052;
+    color: white;
+    font-size: 22px;
+    font-weight: bold;
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.match-center td {
+    border-bottom: 1px solid #dadada;
+    border-top: none;
+    vertical-align: middle;
+    text-align: center;
+    padding: 10px 5px;
+}
+.match-center .team-name { 
+    font-size: 18px;
+    font-weight: bold;
+    padding: 15px 5px;
+    color: #9a9e9d;
+    display: block;
+}
+.match-center .team-logo { 
+    width: 80px;
+    margin: auto;
+    display: block;
+}
+.match-center .team-goals { 
+    font-size: 28px;
+    font-weight: bold;
+    padding: 5px;
+    display: block;
+}
+.match-center .team-separator {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 5px;
+    display: block;
 }
